--- a/Base/nbproject/project.properties
+++ b/Base/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Base
+application.vendor=Asullom
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,15 +33,16 @@ dist.jar=${dist.dir}/Base.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Base
+endorsed.classpath=
 excludes=
-file.reference.MaterialButtoms.jar=D:\\dev\\base\\lib\\MaterialButtoms.jar
+file.reference.poi-3.9-20121203.jar=..\\lib\\poi-3.9-20121203.jar
 file.reference.sqlite-jdbc-3.30.1.jar=D:\\dev\\base\\lib\\sqlite-jdbc-3.30.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.MaterialButtoms.jar}:\
-    ${file.reference.sqlite-jdbc-3.30.1.jar}
+    ${file.reference.sqlite-jdbc-3.30.1.jar}:\
+    ${file.reference.poi-3.9-20121203.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
