--- a/Base/nbproject/project.properties
+++ b/Base/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Base
 endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.4.jar=../../Cursopoocopy/lib/jcalendar-1.4.jar
 file.reference.poi-3.9-20121203.jar=..\\lib\\poi-3.9-20121203.jar
 file.reference.sqlite-jdbc-3.30.1.jar=D:\\dev\\base\\lib\\sqlite-jdbc-3.30.1.jar
 includes=**
@@ -42,7 +43,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.sqlite-jdbc-3.30.1.jar}:\
-    ${file.reference.poi-3.9-20121203.jar}
+    ${file.reference.poi-3.9-20121203.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
